--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
     <title>A Tidy Space </title>
-    <link rel="stylesheet" type="text/css" href="C:\Users\jwill\GitHub\Tidy-Space\main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   
+        <link rel="stylesheet" type="text/css" href="main.css">
    
     <!--font style-->
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-  
+    <meta charset="UTF-8">
 </head>
 
 <body class="main-body">
@@ -46,8 +49,7 @@
 
 
     <!--Bootstrap css-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
 
     <form class="needs-validation" novalidate>
         <div class="form-row">
@@ -141,7 +143,7 @@
 
 <!-- Javascript link -->
 <script src="javascript/jquery-3.3.1.min.js"></script> 
-<script src="C:\Users\jwill\GitHub\Tidy-Space\Javascript\scripts.js"></script> 
+<script src="Javascript\scripts.js"></script> 
 </body>
 <footer class="main-footer">
 
