--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 <!-- slideshow pictures -->
 
-  <div class="slideshow">
+  <div class="flex-container">
      
       <div> 
       <img src="https://live.staticflickr.com/7063/6806671678_6043a650d7.jpg">
